<resources>
    <string name="app_name">IceCurrencies</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="foreign_currency">Foreign Currency</string>
    <string name="calculate">Calculate</string>
    <string name="home_currency">Home Currency</string>
    <string name="calculated_result">Calculated result in home currency:</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="foreign_amount">Enter foreign currency amount here:</string>
</resources>
